# BASE

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: main.yml
Hoe_we_werken/feedback/: index.html
Hoe_we_werken/kanban/: index.html
Hoe_we_werken/offboarding/: index.html
Hoe_we_werken/onboarding/: index.html
Hoe_we_werken/onboarding/accounts/: index.html
Hoe_we_werken/onboarding/werkplek/: index.html
Hoe_we_werken/retros/: index.html
Hoe_we_werken/standups/: index.html
Over_ons/contact/: index.html
Over_ons/team/: index.html
assets/javascripts/: bundle.c8b220af.min.js
docs/: index.md
docs/Hoe_we_werken/: feedback.md  kanban.md  offboarding.md  retros.md  standups.md
docs/Hoe_we_werken/onboarding/: accounts.md  index.md  werkplek.md
docs/Over_ons/: contact.md  team.md
search/: search_index.json
