[project]
name = "bano"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-git-committers-plugin-2>=2.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.5",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-material>=9.6.11",
    "pymdown-extensions>=10.14.3",
]
